--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
 baseurl: "/"
-url: 'http://gwanos.github.io'
+url: 'https://gwanos.github.io'
 github_username: gwanos
 
 # Permalinks
