--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   email: ""
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: "/"
+base_url: "/"
 url: 'https://gwanos.github.io'
 github_username: gwanos
 
