--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@ author:
   email: ""
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-base_url: ""
+baseurl: "/"
 url: 'https://gwanos.github.io'
 github_username: gwanos
 
 # Permalinks
-# permalink: /:title
+permalink: /:title
 # permalink: /author/:username
 # permalink: /tag/:tag
 
