--- a/_config.yml
+++ b/_config.yml
@@ -47,10 +47,10 @@ exclude: [vendor]
 # or "master" otherwise
 
 exclude:
-#   - Rakefile
-#   - Gemfile
-#   - Gemfile.lock
-#   - changelog.md
-#   - "*.Rmd"
-#   - vendor
-#   - .travis.yml
+  - Rakefile
+  - Gemfile
+  - Gemfile.lock
+  - changelog.md
+  - "*.Rmd"
+  - vendor
+  - .travis.yml
