--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Jykell configuration
-markdown: kramdown
-highlighter: rouge
+incremental: true
 paginate: 5
 language: 'en-uk'
 
@@ -13,7 +12,7 @@ author:
   email: ""
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: "/"
+baseurl: ""
 url: 'https://gwanos.github.io'
 github_username: gwanos
 
@@ -23,7 +22,7 @@ permalink: /:title
 # permalink: /tag/:tag
 
 # gems and other configs
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 exclude: [vendor]
 
 # Additional settings available on the front-matter
