--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   email: ""
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: '/'
+baseurl: ""
 url: 'https://gwanos.github.io'
 github_username: gwanos
 
