--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,14 @@ language: 'en-uk'
 title: 'Gwanos Blog'
 name: 'Gwanos Blog'
 description: "Note"
-author: 
-  name: 'Lee'
-  email: ''
+author: lee
+#   name: 'Lee'
+#   email: ''
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
 baseurl: ''
-url: 'https://gwanos.github.io'
+url: 'http://gwanos.github.io'
+short_url: 'gwanos.github.io'
 github_username: gwanos
 
 # Permalinks
@@ -22,7 +23,9 @@ permalink: /:title
 # permalink: /tag/:tag
 
 # gems and other configs
-plugins: [jekyll-paginate]
+plugins: 
+ - jekyll-paginate
+ - jekyll-feed
 exclude: [vendor]
 
 # Additional settings available on the front-matter
