--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ title: 'Gwanos Blog'
 name: 'Gwanos Blog'
 description: "Note"
 author: lee
-#   name: 'Lee'
-#   email: ''
+feed:
+  path: atom.xml
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
 baseurl: ''
@@ -26,7 +26,8 @@ permalink: /:title
 plugins: 
  - jekyll-paginate
  - jekyll-feed
-exclude: [vendor]
+exclude: 
+ -vendor
 
 # Additional settings available on the front-matter
 # Site logo in the index.html (as in demo.ghost.io)
