--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ feed:
   path: atom.xml
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: ''
-url: 'http://gwanos.github.io/'
-short_url: 'gwanos.github.io/'
+baseurl: '/gwanos.github.io'
+url: 'http://gwanos.github.io'
+short_url: 'gwanos.github.io'
 github_username: gwanos
 
 # Permalinks
